--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,2 +1,22 @@
-@use "sass:color";
-@use "minima" as *;
+---
+---
+@import "minima";
+
+body {
+    height: 100%;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0.794)),
+                url("/assets/images/CoryPortrait.jpg") center/cover no-repeat;
+}
+
+.content {
+    // position: absolute;
+    bottom: 0;
+    // background: rgba(0, 0, 0, 0.5);
+    // color: #f1f1f1;
+    width: 100%;
+    padding: 20px;
+    text-align: center;
+}
