--- a/assets/main.scss
+++ b/assets/main.scss
@@ -8,7 +8,7 @@ body {
     display: flex;
     flex-direction: column;
     background: linear-gradient(to bottom, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0.794)),
-                url("/assets/images/CoryPortrait.jpg") center/cover no-repeat;
+                url("/assets/images/CoryPortrait.JPG") center/cover no-repeat;
 }
 
 .content {
