--- a/assets/main.scss
+++ b/assets/main.scss
@@ -9,7 +9,16 @@ body {
     flex-direction: column;
     background: linear-gradient(to bottom, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0.794)),
                 url("{{ site.baseurl }}/assets/images/CoryPortrait.JPG") center/cover no-repeat;
-    
+
+}
+
+@media (max-width: 600px) {
+    body {
+        background: linear-gradient(to top, rgba(255, 255, 255, 0.794), rgba(255, 255, 255, 1)),
+                    url("{{ site.baseurl }}/assets/images/CoryPortrait-mobile.JPG") center/105% 100% no-repeat;
+                    // change just the width of the photo
+
+    }
 }
 
 .content {
