--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -27,7 +27,7 @@
               <svg class="svg-icon">
                 <use xlink:href="/assets/minima-social-icons.svg#linkedin"></use>
               </svg>
-              <span class="username">CoryBoris</span>
+              <span class="username">coryboris</span>
             </a>
         </ul>
       </div>
