--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,43 +13,36 @@
       </div>
 
       <div class="footer-col footer-col-2">
-        <ul class="social-media-list">
-          <li>
-            <a href="https://github.com/CoryWBoris">
+        <ul class="social-media-list horizontal-list">
+            <li>
+                <a href="https://www.linkedin.com/in/coryboris/">
+                    <svg class="svg-icon">
+                        <use xlink:href="/assets/minima-social-icons.svg#linkedin"></use>
+                    </svg>
+                </a>
+            </li>
+            <li>
+              <a href="https://github.com/CoryWBoris">
+                <svg class="svg-icon">
+                  <use xlink:href="/assets/minima-social-icons.svg#github"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+            <a href="https://www.instagram.com/coryboris/">
               <svg class="svg-icon">
-                <use xlink:href="/assets/minima-social-icons.svg#github"></use>
+                <use xlink:href="/assets/minima-social-icons.svg#instagram"></use>
               </svg>
-              <span class="username">CoryWBoris</span>
             </a>
           </li>
           <li>
-            <a href="https://www.linkedin.com/in/coryboris/">
-              <svg class="svg-icon">
-                <use xlink:href="/assets/minima-social-icons.svg#linkedin"></use>
-              </svg>
-              <span class="username">coryboris</span>
-            </a>
-        </ul>
-      </div>
-
-      <div class="footer-col footer-col-3">
-        <ul class="social-media-list">
-        <li>
-            <a href="https://www.instagram.com/coryboris/">
-                <svg class="svg-icon">
-                <use xlink:href="/assets/minima-social-icons.svg#instagram"></use>
-                </svg>
-                <span class="username">COBOMOJO</span>
-            </a>
-        </li>
-        <li>
             <a href="https://www.facebook.com/cory.boris">
-                <svg class="svg-icon">
+              <svg class="svg-icon">
                 <use xlink:href="/assets/minima-social-icons.svg#facebook"></use>
-                </svg>
-                <span class="username">cory.boris</span>
+              </svg>
             </a>
-    </ul>
+          </li>
+        </ul>
       </div>
     </div>
   </div>
