--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -29,14 +29,14 @@
               </a>
             </li>
             <li>
-            <a href="https://www.instagram.com/coryboris/">
+            <a href="https://www.instagram.com/COBOMOJO/">
               <svg class="svg-icon">
                 <use xlink:href="/assets/minima-social-icons.svg#instagram"></use>
               </svg>
             </a>
           </li>
           <li>
-            <a href="https://www.facebook.com/cory.boris">
+            <a href="https://www.facebook.com/cory.boris?mibextid=LQQJ4d">
               <svg class="svg-icon">
                 <use xlink:href="/assets/minima-social-icons.svg#facebook"></use>
               </svg>
