added email svg - custom o0o0o fancy

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -36,9 +36,9 @@
             </a>
           </li>
           <li>
-            <a href="https://www.facebook.com/cory.boris?mibextid=LQQJ4d">
+            <a class="u-email" href="mailto:CoryWBoris@gmail.com">
               <svg class="svg-icon">
-                <use xlink:href="/assets/minima-social-icons.svg#facebook"></use>
+                <use xlink:href="/assets/minima-social-icons.svg#email"></use>
               </svg>
             </a>
           </li>
