corrected footer some more mobile

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="site-footer h-card">
+<footer class="site-footer h-card desktop-footer">
   <data class="u-url" href="/"></data>
 
   <div class="wrapper">
@@ -47,5 +47,50 @@
     </div>
   </div>
 </footer>
-</body>
-</html>
+<footer class="site-footer h-card mobile-footer">
+  <data class="u-url" href="/"></data>
+
+  <div class="wrapper">
+    <h2 class="footer-heading">Contact</h2>
+
+    <div class="footer-col-wrapper">
+      <div class="footer-col footer-col-2">
+        <ul class="social-media-list horizontal-list">
+          <li class="email-item">
+            <span class="email-label">Email:</span>
+            <a class="u-email" href="mailto:CoryWBoris@gmail.com">CoryWBoris@gmail.com</a>
+          </li>
+          <li>
+            <a href="https://www.linkedin.com/in/coryboris/">
+                <svg class="svg-icon">
+                    <use xlink:href="/assets/minima-social-icons.svg#linkedin"></use>
+                </svg>
+            </a>
+        </li>
+        <li>
+          <a href="https://github.com/CoryWBoris">
+            <svg class="svg-icon">
+              <use xlink:href="/assets/minima-social-icons.svg#github"></use>
+            </svg>
+          </a>
+        </li>
+        <li>
+        <a href="https://www.instagram.com/COBOMOJO/">
+          <svg class="svg-icon">
+            <use xlink:href="/assets/minima-social-icons.svg#instagram"></use>
+          </svg>
+        </a>
+      </li>
+      <li>
+        <a class="u-email" href="mailto:CoryWBoris@gmail.com">
+          <svg class="svg-icon">
+            <use xlink:href="/assets/minima-social-icons.svg#email"></use>
+          </svg>
+        </a>
+      </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</footer>
+<!-- End of _includes/footer.html -->
