--- a/assets/main.scss
+++ b/assets/main.scss
@@ -18,7 +18,7 @@
 @media (max-width: 600px) {
     body {
       padding: 0;
-      height: 100vh;
+      // height: 100vh;
       margin: 0;
       display: flex;
       flex-direction: column;
@@ -225,4 +225,5 @@
   .social-media-list.horizontal-list {
     margin: 0;
   }
+  
 }
