--- a/assets/main.scss
+++ b/assets/main.scss
@@ -9,7 +9,7 @@
       margin: 0;
       display: flex;
       flex-direction: column;
-      background: linear-gradient(to bottom, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0.794)),
+      background: linear-gradient(to top, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0.794)),
                   url("{{ site.baseurl }}/assets/images/CoryPortrait.JPG") center/cover no-repeat;
 
   }
