--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,6 +1,9 @@
 ---
 ---
 @import "minima";
+body {
+    user-select: none; /* Disable text selection */
+}
 
 @media (min-width: 601px) {
   body {
@@ -226,4 +229,135 @@
     margin: 0;
   }
 
+}
+.audio-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
+    width: 100%;
+}
+
+.control-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%; /* Ensure the control container takes full width */
+}
+
+#playPauseButton {
+    font-size: 2em;
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-bottom: 20px;
+    text-align: center;
+    width: 100%;
+}
+
+#playPauseButton:hover {
+    background-color: #0056b3;
+}
+
+#stopButton {
+  font-size: 2em;
+  padding: 10px 20px;
+  background-color: #ff0080;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-bottom: 20px;
+  text-align: center;
+  width: 100%;
+}
+
+#stopButton:hover {
+  background-color: #ff0400;
+}
+
+.volume-slider-container,
+.speed-slider-container {
+    position: relative;
+    width: 100%;
+    // max-width: 400px;
+}
+
+.road {
+    position: relative;
+    width: 100%;
+    height: 10px;
+    background-color: #ccc;
+    border-radius: 5px;
+    margin-top: 20px;
+}
+
+#volumeSlider,
+#speedSlider {
+    -webkit-appearance: none;
+    width: 100%;
+    height: 10px;
+    background: transparent;
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin: 0;
+    padding: 0;
+}
+
+#volumeSlider::-webkit-slider-thumb,
+#speedSlider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 40px;
+    height: 40px;
+    background: transparent;
+    cursor: pointer;
+}
+
+#volumeSlider::-moz-range-thumb,
+#speedSlider::-moz-range-thumb {
+    width: 40px;
+    height: 40px;
+    background: transparent;
+    cursor: pointer;
+}
+
+.car {
+    position: absolute;
+    top: -15px;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+
+.car-body {
+    width: 40px;
+    height: 20px;
+}
+
+.wheel {
+    width: 10px;
+    height: 10px;
+}
+
+.front-wheel {
+    position: absolute;
+    left: 5px;
+    bottom: -5px;
+}
+
+.back-wheel {
+    position: absolute;
+    right: 5px;
+    bottom: -5px;
+}
+
+.red-car .car-body {
+    fill: #ff0000;
 }
