--- a/assets/main.scss
+++ b/assets/main.scss
@@ -315,7 +315,8 @@ body {
 }
 
 .volume-slider-container,
-.speed-slider-container {
+.speed-slider-container,
+.reverb-slider-container {
     position: relative;
     width: 100%;
     // max-width: 400px;
@@ -331,7 +332,8 @@ body {
 }
 
 #volumeSlider,
-#speedSlider {
+#speedSlider,
+#reverbSlider {
     -webkit-appearance: none;
     width: 100%;
     height: 10px;
@@ -344,7 +346,8 @@ body {
 }
 
 #volumeSlider::-webkit-slider-thumb,
-#speedSlider::-webkit-slider-thumb {
+#speedSlider::-webkit-slider-thumb,
+#reverbSlider::-webkit-slider-thumb {
     -webkit-appearance: none;
     appearance: none;
     width: 40px;
@@ -354,14 +357,15 @@ body {
 }
 
 #volumeSlider::-moz-range-thumb,
-#speedSlider::-moz-range-thumb {
+#speedSlider::-moz-range-thumb,
+#reverbSlider::-moz-range-thumb {
     width: 40px;
     height: 40px;
     background: transparent;
     cursor: pointer;
 }
 
-.car {
+.car, .red-car, .green-car {
     position: absolute;
     top: -15px;
     left: 50%;
@@ -371,33 +375,7 @@ body {
     cursor: pointer;
 }
 
-.car-body {
-    width: 40px;
-    height: 20px;
-}
-
-.wheel {
-    width: 10px;
-    height: 10px;
-}
-
-.front-wheel {
-    position: absolute;
-    left: 5px;
-    bottom: -5px;
-}
-
-.back-wheel {
-    position: absolute;
-    right: 5px;
-    bottom: -5px;
-}
-
-.red-car .car-body {
-    fill: #ff0000;
-}
-
-.car, .red-car {
+.car, .red-car, .green-car {
     position: absolute;
     top: -15px;
     left: 50%;
@@ -407,7 +385,8 @@ body {
 
 /* Make sure the input range is properly layered */
 #volumeSlider,
-#speedSlider {
+#speedSlider,
+#reverbSlider {
     -webkit-appearance: none;
     width: 100%;
     height: 10px;
@@ -421,17 +400,17 @@ body {
 
 /* Ensure the car is draggable */
 @media (min-width: 601px) {
-.car, .red-car {
+.car, .red-car, .green-car {
     pointer-events: auto;
 }
 }
 @media (max-width: 600px) {
-  .car, .red-car {
+  .car, .red-car, .green-car {
     pointer-events: none;
 }
 }
 /* Make sure SVG doesn't interfere with dragging */
-.car svg, .red-car svg {
+.car svg, .red-car svg, .green-car svg {
     fill-opacity: 1;
     stroke: none;
     background: none;
@@ -442,20 +421,20 @@ body {
 }
 
 /* Target both the container and SVG */
-.car, .red-car,
-.car svg, .red-car svg {
+.car, .red-car, .green-car,
+.car svg, .red-car svg, .green-car svg {
     -webkit-tap-highlight-color: transparent;
     -webkit-touch-callout: none;
     touch-action: none;
 }
 
 /* Ensure no mobile selection */
-.car, .red-car {
+.car, .red-car, .green-car {
     user-select: none;
     -webkit-user-select: none;
 }
 
-.car svg, .red-car svg {
+.car svg, .red-car svg, .green-car svg {
     /* Remove any border */
     border: 0;
     /* Remove any shadow */
@@ -469,19 +448,19 @@ body {
     shape-rendering: crispEdges;
 }
 
-.car, .red-car {
+.car, .red-car, .green-car {
     -webkit-appearance: none;
     background: none;
     box-shadow: none;
 }
 
-.car svg, .red-car svg {
+.car svg, .red-car svg, .green-car svg {
     -webkit-appearance: none;
     background: none;
     box-shadow: none;
 }
 
-.car, .red-car {
+.car, .red-car, .green-car {
     /* Remove any container effects */
     -webkit-appearance: none;
     -webkit-backdrop-filter: none;
@@ -493,7 +472,7 @@ body {
 }
 
 /* Target WebKit's SVG container specifically */
-.car svg, .red-car svg {
+.car svg, .red-car svg, .green-car svg {
     /* Remove default WebKit styling */
     -webkit-filter: none;
     filter: none;
@@ -503,6 +482,7 @@ body {
     shape-rendering: optimizeSpeed;
 }
 #volumeSlider::-webkit-slider-thumb,
-#speedSlider::-webkit-slider-thumb {
+#speedSlider::-webkit-slider-thumb,
+#reverbSlider::-webkit-slider-thumb {
   opacity: 0;
 }
