--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -36,9 +36,9 @@
             </a>
           </li>
           <li>
-            <a class="u-email" href="mailto:CoryWBoris@gmail.com">
+            <a href="https://youtube.com/@COBOMOJO">
               <svg class="svg-icon">
-                <use xlink:href="/assets/minima-social-icons.svg#email"></use>
+                <use xlink:href="/assets/minima-social-icons.svg#youtube"></use>
               </svg>
             </a>
           </li>
@@ -82,9 +82,9 @@
         </a>
       </li>
       <li>
-        <a class="u-email" href="mailto:CoryWBoris@gmail.com">
+        <a href="https://youtube.com/@COBOMOJO">
           <svg class="svg-icon">
-            <use xlink:href="/assets/minima-social-icons.svg#email"></use>
+            <use xlink:href="/assets/minima-social-icons.svg#youtube"></use>
           </svg>
         </a>
       </li>
