simplified mobile footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -58,7 +58,7 @@
       <div class="footer-col footer-col-2">
         <ul class="social-media-list horizontal-list">
           <li class="email-item">
-            <span class="email-label">Email:</span>
+            <!-- <span class="email-label">Email:</span> -->
             <a class="u-email" href="mailto:CoryWBoris@gmail.com">CoryWBoris@gmail.com</a>
           </li>
           <li>
