--- a/assets/main.scss
+++ b/assets/main.scss
@@ -335,7 +335,8 @@ body {
 
 .volume-slider-container,
 .speed-slider-container,
-.reverb-slider-container {
+.reverb-slider-container,
+.time-slider-container {
     position: relative;
     width: 100%;
     // max-width: 400px;
@@ -352,7 +353,8 @@ body {
 
 #volumeSlider,
 #speedSlider,
-#reverbSlider {
+#reverbSlider,
+#timeSlider {
     -webkit-appearance: none;
     width: 100%;
     height: 10px;
@@ -366,7 +368,8 @@ body {
 
 #volumeSlider::-webkit-slider-thumb,
 #speedSlider::-webkit-slider-thumb,
-#reverbSlider::-webkit-slider-thumb {
+#reverbSlider::-webkit-slider-thumb,
+#timeSlider::-webkit-slider-thumb {
     -webkit-appearance: none;
     appearance: none;
     width: 40px;
@@ -377,14 +380,15 @@ body {
 
 #volumeSlider::-moz-range-thumb,
 #speedSlider::-moz-range-thumb,
-#reverbSlider::-moz-range-thumb {
+#reverbSlider::-moz-range-thumb,
+#timeSlider::-moz-range-thumb {
     width: 40px;
     height: 40px;
     background: transparent;
     cursor: pointer;
 }
 
-.car, .red-car, .green-car {
+.car, .red-car, .green-car, .purple-car {
     position: absolute;
     top: -15px;
     left: 50%;
@@ -394,7 +398,7 @@ body {
     cursor: pointer;
 }
 
-.car, .red-car, .green-car {
+.car, .red-car, .green-car, .purple-car {
     position: absolute;
     top: -15px;
     left: 50%;
@@ -405,7 +409,8 @@ body {
 /* Make sure the input range is properly layered */
 #volumeSlider,
 #speedSlider,
-#reverbSlider {
+#reverbSlider,
+#timeSlider {
     -webkit-appearance: none;
     width: 100%;
     height: 10px;
@@ -419,17 +424,17 @@ body {
 
 /* Ensure the car is draggable */
 @media (min-width: 601px) {
-.car, .red-car, .green-car {
+.car, .red-car, .green-car, .purple-car {
     pointer-events: auto;
 }
 }
 @media (max-width: 600px) {
-  .car, .red-car, .green-car {
+  .car, .red-car, .green-car, .purple-car {
     pointer-events: none;
 }
 }
 /* Make sure SVG doesn't interfere with dragging */
-.car svg, .red-car svg, .green-car svg {
+.car svg, .red-car svg, .green-car svg, .purple-car svg {
     fill-opacity: 1;
     stroke: none;
     background: none;
@@ -440,20 +445,20 @@ body {
 }
 
 /* Target both the container and SVG */
-.car, .red-car, .green-car,
-.car svg, .red-car svg, .green-car svg {
+.car, .red-car, .green-car, .purple-car,
+.car svg, .red-car svg, .green-car svg, .purple-car svg {
     -webkit-tap-highlight-color: transparent;
     -webkit-touch-callout: none;
     touch-action: none;
 }
 
 /* Ensure no mobile selection */
-.car, .red-car, .green-car {
+.car, .red-car, .green-car, .purple-car {
     user-select: none;
     -webkit-user-select: none;
 }
 
-.car svg, .red-car svg, .green-car svg {
+.car svg, .red-car svg, .green-car svg, .purple-car svg {
     /* Remove any border */
     border: 0;
     /* Remove any shadow */
@@ -467,19 +472,19 @@ body {
     shape-rendering: crispEdges;
 }
 
-.car, .red-car, .green-car {
+.car, .red-car, .green-car, .purple-car {
     -webkit-appearance: none;
     background: none;
     box-shadow: none;
 }
 
-.car svg, .red-car svg, .green-car svg {
+.car svg, .red-car svg, .green-car svg, .purple-car svg {
     -webkit-appearance: none;
     background: none;
     box-shadow: none;
 }
 
-.car, .red-car, .green-car {
+.car, .red-car, .green-car, .purple-car {
     /* Remove any container effects */
     -webkit-appearance: none;
     -webkit-backdrop-filter: none;
@@ -491,7 +496,7 @@ body {
 }
 
 /* Target WebKit's SVG container specifically */
-.car svg, .red-car svg, .green-car svg {
+.car svg, .red-car svg, .green-car svg, .purple-car svg {
     /* Remove default WebKit styling */
     -webkit-filter: none;
     filter: none;
@@ -502,7 +507,8 @@ body {
 }
 #volumeSlider::-webkit-slider-thumb,
 #speedSlider::-webkit-slider-thumb,
-#reverbSlider::-webkit-slider-thumb {
+#reverbSlider::-webkit-slider-thumb,
+#timeSlider::-webkit-slider-thumb {
   opacity: 0;
 }
 // make text justified in the center on mobile
@@ -659,3 +665,4 @@ site-footer.h-card {
     }
   }
 }
+
